<resources>
    <string name="app_name">SivaInterviewTraining</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Login Page-->
    <string name="btn_txt_log_in">Sign in</string>
    <string name="txt_forgot_password">Password</string>
    <string name="txt_register">Sign up</string>
    <string name="txt_register_farmer">Register as farm owner/consumer</string>
    <string name="txt_register_business">Register as affiliate</string>
    <string name="txt_pswd_reset_title">PASSWORD RESET</string>
    <string name="txt_pswd_reset_message">Enter Registered Email</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="TOAST_loginTask_logoutConfirm_onPostExecute">Logged in successfully</string>
    <string name="forgot_error_field_required">Enter Registered Email</string>
    <string name="forgot_invalid_pass_fail">Invalid registered email</string>
    <string name="error_four_digit_field_required">Four digit pin is require</string>
    <string name="error_invalid_entry">Invalid entry...</string>
    <string name="error_please_signup">Please Sign up...</string>
    <string name="forgot_invalid_pass_true">Password reset link email has been sent to your email address</string>

    <!--Registration Page-->
    <string name="hint_name">Name</string>
    <string name="hint_city">City</string>
    <string name="hint_product">Product</string>
    <string name="hint_enter_state">Enter State/province</string>
    <string name="hint_state">State/province</string>
    <string name="hint_country">Country</string>
    <string name="hint_phone_no">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_pin">PIN</string>
    <string name="hint_refferal">Referral/Franchise code (Optional)</string>
    <string name="hint_con_password">Confirm password</string>
    <string name="hint_user_email">E-mail</string>
    <string name="text_no_attachment">No Doc/pictures</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
</resources>
