<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--  <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scrollbars="vertical">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_login_paddingLeft"
        android:paddingRight="@dimen/activity_login_paddingRight">

        <RelativeLayout
            android:id="@+id/circleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_login_margin_top">




        </RelativeLayout>


        <LinearLayout
            android:id="@+id/login_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/circleView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"

            android:gravity="center"

            android:orientation="vertical"
            android:padding="@dimen/activity_login_card_padding">


            <EditText
                android:id="@+id/edtTxt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_login_edtxt_margin_left_and_right"
                android:layout_marginRight="@dimen/activity_login_edtxt_margin_left_and_right"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_people_black_24dp"
                android:drawablePadding="@dimen/activity_login_edtxt_drawable_padding"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_user_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="@dimen/activity_login_edtxt_padding"
                android:scrollHorizontally="true"
                android:textColor="@color/icons"
                android:textSize="@dimen/activity_login_edtxt_txt_size" />


            <EditText
                android:id="@+id/edtTxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_login_edtxt_margin_left_and_right"
                android:layout_marginRight="@dimen/activity_login_edtxt_margin_left_and_right"
                android:layout_marginTop="@dimen/activity_login_edtxt_margin_top"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/activity_login_edtxt_drawable_padding"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/hint_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="@dimen/activity_login_edtxt_padding"
                android:scrollHorizontally="true"
                android:textColor="@color/icons"
                android:textSize="@dimen/activity_login_edtxt_txt_size" />


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/login_details"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"

            android:background="@drawable/button_fill_background">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:minWidth="88dp"
                android:text="@string/btn_txt_log_in"
                android:textColor="@color/icons"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_outline_background">

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:minWidth="88dp"
                android:text="@string/txt_register"
                android:textColor="@color/icons"
                android:textSize="20dp" />
        </RelativeLayout>


    </RelativeLayout>


    <!--    </ScrollView>-->



</RelativeLayout>